--- a/404.html
+++ b/404.html
@@ -32,6 +32,18 @@
 				text-align: center;  
 			}
 
+			h1 {
+				font-family: 'Bai Jamjuree', sans-serif;
+				font-size: 5em;
+				margin: 0;
+				padding: 0;
+				margin-top: 10vh;
+			}
+
+			a {
+				color: var(--text-alt-colour);
+				text-decoration: none;
+			}
 		</style>
 		    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
